--- a/config/settings.json
+++ b/config/settings.json
@@ -1,6 +1,6 @@
 {
     "status": {
-      "message": "{{XBROWSERSYNC_STATUS_MESSAGE}}"
+        "message": "{{XBROWSERSYNC_STATUS_MESSAGE}}"
     },
     "server": {
         "behindProxy": "{{XBROWSERSYNC_SERVER_BEHINDPROXY}}"
@@ -8,6 +8,9 @@
     "db": {
         "host": "{{XBROWSERSYNC_MONGODB_SERVER}}"
     },
+    "dailyNewSyncsLimit": "{{XBROWSERSYNC_DAILYNEWSYNCSLIMIT}}",
+    "maxSyncSize": "{{XBROWSERSYNC_MAXSYNCSIZE}}",
+    "allowedOrigins": [ "{{XBROWSERSYNC_ALLOWEDORIGINS}}" ],
     "log": {
         "enabled": true,
         "level": "info",
